gcc/testsuite/g++.dg/lookup/hidden-class5.C
// Copyright (C) 2005 Free Software Foundation
// Contributed by Kriang Lerdsuwanakij <lerdsuwa@users.sourceforge.net>
// { dg-do compile }

class A {
  friend class B;
};

B* b;		// { dg-error "expected" }
